--- a/chromium/popup.html
+++ b/chromium/popup.html
@@ -132,6 +132,7 @@
     </main>
 
     <script src="./vendor/lucide.min.js"></script>
+    <script src="./vendor/lucide-lab-icons.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
